Lista de usuarios

--- a/src/app/user/user-list/user-list.component.html
+++ b/src/app/user/user-list/user-list.component.html
@@ -1,3 +1,5 @@
-<p>
-  user-list works!
-</p>
+<h3>User list component</h3>
+
+<div *ngFor="let user of users">
+	{{ user._id }} - {{ user.first_name }} - {{ user.last_name }} - {{ user.email }}
+</div>
