--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -3,3 +3,5 @@
 <pre>{{ users | json }}</pre>
 
 <app-user-new (createNewUserEvent)="create($event)"></app-user-new>
+
+<app-user-list [users]="users"></app-user-list>
