--- a/src/app/user/user-list/user-list.component.html
+++ b/src/app/user/user-list/user-list.component.html
@@ -1,5 +1,7 @@
 <h3>User list component</h3>
 
 <div *ngFor="let user of users">
-	{{ user._id }} - {{ user.first_name }} - {{ user.last_name }} - {{ user.email }}
+	{{ user._id }} - {{ user.first_name }} - {{ user.last_name }} - {{ user.email }} 
+	<button (click)="destroy(user)">Delete</button> 
+	<button>Update</button>
 </div>
