--- a/src/app/user/user-edit/user-edit.component.html
+++ b/src/app/user/user-edit/user-edit.component.html
@@ -1,3 +1,9 @@
-<p>
-  user-edit works!
-</p>
+<h3>User edit component</h3>
+
+<form (submit)="update()">
+	<input type="text" name="first_name" [(ngModel)]="editUser.first_name">
+	<input type="text" name="last_name" [(ngModel)]="editUser.last_name">
+	<input type="text" name="email" [(ngModel)]="editUser.email">
+
+	<button type="submit">Update</button>
+</form>
